--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -1,16 +1,16 @@
-{% load custom_filters %}
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Admin Dashboard</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+{% extends 'base.html' %}
+
+{% block title %}Admin Dashboard{% endblock %}
+
+{% block extra_css %}
     <style>
         .card-positive { background-color: #8bc34a; color: black; } /* Green */
         .card-neutral { background-color: #ffeb3b; color: black; } /* Yellow */
         .card-negative { background-color: #f44336; color: black; } /* Red */
     </style>
-</head>
-<body>
+{% endblock %}
+
+{% block content %}
     <div class="container mt-5">
         <h1>Admin Dashboard</h1>
         <div class="row mt-4">
@@ -25,10 +25,10 @@
                         <div class="mb-2">
                             <strong>Not Contacted:</strong> {{ user.status_counts.not_contacted }}
                         </div>
-                        
+
                         <!-- Positive Status Sub-Card -->
                         <div class="card mb-2">
-                            <div class="card-header card-positive ">
+                            <div class="card-header card-positive">
                                 Positive Status
                             </div>
                             <div class="card-body">
@@ -39,9 +39,9 @@
                                 {% endfor %}
                             </div>
                         </div>
-                        
+
                         <!-- Neutral Status Sub-Card -->
-                        <div class="card  mb-2">
+                        <div class="card mb-2">
                             <div class="card-header card-neutral">
                                 Neutral Status
                             </div>
@@ -53,7 +53,7 @@
                                 {% endfor %}
                             </div>
                         </div>
-                        
+
                         <!-- Negative Status Sub-Card -->
                         <div class="card mb-2">
                             <div class="card-header card-negative">
@@ -67,7 +67,7 @@
                                 {% endfor %}
                             </div>
                         </div>
-                        
+
                         <a href="{% url 'user_dashboard' user.user.id %}" class="btn btn-primary btn-sm">View Details</a>
                     </div>
                 </div>
@@ -75,5 +75,4 @@
             {% endfor %}
         </div>
     </div>
-</body>
-</html>
+{% endblock %}
