--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Update Entry{% endblock %}
+{% block title %}Login{% endblock %}
 
 {% block content %}
     <div class="container mt-5">
